changed build file to use scm io repo